@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-30T08:22:05Z",
-  "count_outdated" : 2302,
-  "uniques_outdated" : 516,
-  "count" : 2330,
-  "uniques" : 533,
+  "timestamp" : "2022-07-31T02:03:11Z",
+  "count_outdated" : 2304,
+  "uniques_outdated" : 518,
+  "count" : 2331,
+  "uniques" : 534,
   "clones" : [
-    {
-      "timestamp": "2022-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-07-20T00:00:00Z",
       "count": 3,
